# ComputerVison

./: .gitignore  README.md  first_cv.py  project_a.py  second_cv.py  third_cv.py
4weeks/: first_cv.py  project_a.py  second_cv.py  third_cv.py
cv07/src/: train_mnist.py  visualation_mnist.py
cv09/: cnn.py
vision_agent/: README.md  app.py
vision_agent3/: README.md  pyproject.toml
vision_agent3/src/: main.py
vision_agent4/: README.md  pyproject.toml
vision_agent4/src/: main.py
