[tool.poetry]
name = "vision-agent3"
version = "0.1.0"
description = "panorama_image_production"
authors = ["minseong0123 <minseong0213@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
PyQt6 = "^6.7.1"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
