[tool.poetry]
name = "vision-agent4"
version = "0.1.0"
description = "effects_processing"
authors = ["minseong0123 <minseong0213@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.7.1"
opencv-python = "^4.10.0.84"
numpy = "^2.1.3"
opencv-contrib-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
